# metis-docs

./: .readthedocs.yaml  README.md  pippo.txt  pyproject.toml  requirements.txt
source/: conf.py  contributing.rst  getting_started.rst  index.rst
source/_static/: custom.css
source/api_reference/: index.rst
source/data_overview/: analysis_tools.rst  data_access.rst  data_overview.rst  idl_tools.rst  index.rst
source/examples/: GALLERY_HEADER.rst  monitor_soar.py
source/topic_guides/: index.rst
